<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.haatapp.app.activities.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/food_type_image"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:src="@drawable/ic_veg" />

                <TextView
                    android:id="@+id/product_name"
                    fontPath="fonts/Nunito-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textColor="@color/colorTextBlack" />

            </LinearLayout>


            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:text="@string/large_text"
                android:textColor="@color/colorSecondaryText" />


            <TextView
                android:id="@+id/add_ons_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:text="@string/add_ons"
                android:textColor="@color/colorTextBlack" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/add_ons_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half">

            </android.support.v7.widget.RecyclerView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:text="@string/custom_notes"
                android:textColor="@color/colorTextBlack" />


            <EditText
                android:layout_marginBottom="@dimen/_60sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="#eee"
                android:gravity="start"
                android:hint="@string/write_something"
                android:padding="@dimen/activity_vertical_margin_half"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

    </RelativeLayout>



</android.support.v4.widget.NestedScrollView>
