<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haatapp.app.activities.FavouritesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="1dp"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/favorites_Rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/no_result"
                android:padding="8dp"
                android:src="@drawable/empty_fav" />

            <TextView
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/what_is_love"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/fav_description"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
