<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin_half">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="@dimen/_5sdp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_promo" />

            <TextView
                android:id="@+id/promo_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/theme"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/promo_apply_text"
                android:textColor="@color/colorSecondaryText" />

            <Button
                android:id="@+id/status_btn"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_corner_bg_theme"
                android:gravity="center"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
